doc：Javadoc of ticket-service is done.